--- a/Festival/terms.html
+++ b/Festival/terms.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-    <html>
-    <head>
-      <meta charset='utf-8'>
-      <meta name='viewport' content='width=device-width'>
-      <title>Terms &amp; Conditions</title>
-      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
-    </head>
-    <body>
-    <strong>Terms &amp; Conditions</strong> <p>
+<html>
+	<head>
+		<meta charset='utf-8'>
+			<meta name='viewport' content='width=device-width'>
+				<title>Terms &amp; Conditions</title>
+				<style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
+			</head>
+			<body>
+				<strong>Terms &amp; Conditions</strong>
+				<p>
                   By downloading or using the app, these terms will
                   automatically apply to you – you should make sure therefore
                   that you read them carefully before using the app. You’re not
@@ -18,14 +19,16 @@
                   versions. The app itself, and all the trade marks, copyright,
                   database rights and other intellectual property rights related
                   to it, still belong to Hakan Eren.
-                </p> <p>
+                </p>
+				<p>
                   Hakan Eren is committed to ensuring that the app is
                   as useful and efficient as possible. For that reason, we
                   reserve the right to make changes to the app or to charge for
                   its services, at any time and for any reason. We will never
                   charge you for the app or its services without making it very
                   clear to you exactly what you’re paying for.
-                </p> <p>
+                </p>
+				<p>
                   The ZoomPicture app stores and processes personal data that
                   you have provided to us, in order to provide my
                   Service. It’s your responsibility to keep your phone and
@@ -36,13 +39,29 @@
                   phone vulnerable to malware/viruses/malicious programs,
                   compromise your phone’s security features and it could mean
                   that the ZoomPicture app won’t work properly or at all.
-                </p> <div><p>
+                </p>
+				<div>
+					<p>
                     The app does use third party services that declare their own
                     Terms and Conditions.
-                  </p> <p>
+                  </p>
+					<p>
                     Link to Terms and Conditions of third party service
                     providers used by the app
-                  </p> <ul><!----><li><a href="https://developers.google.com/admob/terms" target="_blank">AdMob</a></li><li><a href="https://firebase.google.com/terms/analytics" target="_blank">Google Analytics for Firebase</a></li><li><a href="https://firebase.google.com/terms/crashlytics" target="_blank">Firebase Crashlytics</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p>
+                  </p>
+					<ul>
+						<li>
+							<a href="https://developers.google.com/admob/terms" target="_blank">AdMob</a>
+						</li>
+						<li>
+							<a href="https://firebase.google.com/terms/analytics" target="_blank">Google Analytics for Firebase</a>
+						</li>
+						<li>
+							<a href="https://firebase.google.com/terms/crashlytics" target="_blank">Firebase Crashlytics</a>
+						</li>
+					</ul>
+				</div>
+				<p>
                   You should be aware that there are certain things that
                   Hakan Eren will not take responsibility for. Certain
                   functions of the app will require the app to have an active
@@ -51,7 +70,9 @@
                   cannot take responsibility for the app not working at full
                   functionality if you don’t have access to Wi-Fi, and you don’t
                   have any of your data allowance left.
-                </p> <p></p> <p>
+                </p>
+				<p></p>
+				<p>
                   If you’re using the app outside of an area with Wi-Fi, you
                   should remember that your terms of the agreement with your
                   mobile network provider will still apply. As a result, you may
@@ -64,13 +85,15 @@
                   you are not the bill payer for the device on which you’re
                   using the app, please be aware that we assume that you have
                   received permission from the bill payer for using the app.
-                </p> <p>
+                </p>
+				<p>
                   Along the same lines, Hakan Eren cannot always take
                   responsibility for the way you use the app i.e. You need to
                   make sure that your device stays charged – if it runs out of
                   battery and you can’t turn it on to avail the Service,
                   Hakan Eren cannot accept responsibility.
-                </p> <p>
+                </p>
+				<p>
                   With respect to Hakan Eren’s responsibility for your
                   use of the app, when you’re using the app, it’s important to
                   bear in mind that although we endeavour to ensure that it is
@@ -79,7 +102,8 @@
                   to you. Hakan Eren accepts no liability for any
                   loss, direct or indirect, you experience as a result of
                   relying wholly on this functionality of the app.
-                </p> <p>
+                </p>
+				<p>
                   At some point, we may wish to update the app. The app is
                   currently available on iOS – the requirements for
                   system(and for any additional systems we
@@ -96,19 +120,28 @@
                   rights and licenses granted to you in these terms will end;
                   (b) you must stop using the app, and (if needed) delete it
                   from your device.
-                </p> <p><strong>Changes to This Terms and Conditions</strong></p> <p>
+                </p>
+				<p>
+					<strong>Changes to This Terms and Conditions</strong>
+				</p>
+				<p>
                   I may update our Terms and Conditions
                   from time to time. Thus, you are advised to review this page
                   periodically for any changes. I will
                   notify you of any changes by posting the new Terms and
                   Conditions on this page.
-                </p> <p>
+                </p>
+				<p>
                   These terms and conditions are effective as of 2020-05-30
-                </p> <p><strong>Contact Us</strong></p> <p>
+                </p>
+				<p>
+					<strong>Contact Us</strong>
+				</p>
+				<p>
                   If you have any questions or suggestions about my
                   Terms and Conditions, do not hesitate to contact me
                   at hakanerenprod@gmail.com.
                 </p>
-    </body>
-    </html>
+			</body>
+		</html>
       
